<?xml version="1.0" encoding="utf-8"?>
<android.widget.FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.caffae.studentsc.ClassroomIDActivity"
    android:background="@android:color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Classroom ID"
        android:layout_marginBottom="70dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/editTextClassroomID"
        android:paddingLeft="10dp"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:inputType="number"
        android:background="@drawable/edittextbackground"
        />

    <Button
        android:id="@+id/buttonEnterClassroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter Classroom"
        android:layout_gravity="center"
        android:layout_marginTop="90dp"/>

</android.widget.FrameLayout>
