<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_assignment_black_24dp"
        android:title="@string/title_class"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/rating"
        android:title="@string/title_feedback"/>

    <item
        android:id="@+id/navigation_grades"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/title_grades"/>

</menu>
