<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:orientation="vertical"
    android:background="@drawable/questionbackground">

    <TextView
        android:id="@+id/shortAnswerQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="30dp"
        android:text="question"
        android:textColor="@android:color/white"
        android:textSize="20dp" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@android:color/white"
        android:id="@+id/shortAnswerQuestionEditText"
        android:layout_marginBottom="50dp"
        android:background="@drawable/edittextbackground" android:inputType=""/>

</LinearLayout>
